css/style.css
* {
    padding: 0;
    margin: 0;
    text-decoration: none;
    list-style: none;
    box-sizing: border-box;
    font-family: sans-serif;
}

body {
    background-color: blue;
}

.wrapper {
    width: 100%;
    overflow: hidden;
}

#main_nav {
    background-color: black;
    height: 30px;
    width: 100%;
}

#main_nav ul{
    background-color: rebeccapurple;
    display: block;
    margin-left: -10px;
}

#main_nav ul li {
    float: left;
    line-height: 30px;
    width: 80px;
    border: 5px white;
    text-align: center;
    
}

.main_nav_anchor {
    font-size: 17px;
    color: white;
    height: 100%;
}

#main_nav ul li:hover {
    background-color: #009683;
}

#slideImg {
    width: 100%;
    height: 400px;
}

#teamDiv {
    height: 500px;
    background-color: white;
    margin-top: -10px;
    padding: 3%;
}

#teamDiv h2, p {
    text-align: center;
    line-height: 40px;
}

.teamMember{
    width: 21%;
    margin-top: 20px;
    margin-left: 2%;
    margin-right: 2%;
    float: left;
}

.teamMember img {
    width: 200px;
    width: 200px;
    border-radius: 50%;
    margin: auto;
    display: block;
    padding: 20px;
}

.teamMember h3 {
    text-align: center;
    font-weight: 300;
}

.teamMember p {
    font-size: 14px;
}

#ourWork {
    height: 480px;
    background-color: #343535;
    padding-top: 40px;
    padding-bottom: 100px;
    padding-left: 2%;
    padding-right: 2%;
}

.ourWorkContent {
    width: 24%;
    height: 400px;
    float: left;
    background-color: white;
    margin-right: 1%;
}

.ourWorkContent h2, p {
    text-align: left;
    color: white;
    margin-bottom: 15px;
}

.ourWorkContent p {
    width: 100%;
    line-height: 30px;
    text-align: left;
    font-size: 12px;
}

.ourWorkContent img {
    height: 200px;
    width: 100%;
    padding-left: -10px;
}

.ourWorkContent h4, ul {
    padding-left: 10px;
    line-height: 30px;
}

.ourWorkContent h4 {
    margin-bottom: 10px;
}

#ourWorkNoBackground {
    background-color: #343535;
}

